--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /POO/Producto_Academico_01/target/
+/POO/Producto_Academico_02/CajeroAutomatico/target/
+/POO/Producto_Academico_02/cajeroATM/target/
