--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "*.tcc": "cpp",
     "algorithm": "cpp",
     "memory_resource": "cpp",
-    "limits": "cpp"
+    "limits": "cpp",
+    "ostream": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
